fix(ui): dark mode error page styles (#383)

--- a/apps/beeai-ui/src/components/ErrorPage/ErrorPage.module.scss
+++ b/apps/beeai-ui/src/components/ErrorPage/ErrorPage.module.scss
@@ -25,6 +25,7 @@
   max-inline-size: 100%;
   block-size: auto;
   margin-block-end: $spacing-06;
+  fill: currentColor;
 }
 
 .heading {
